info overlapping fix

--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ h1 {
     position: absolute;
     bottom: 8px;
     width: 100%;
+    z-index: 10;
 }
 
 #source-code-small {
